[package]
name = "multihook"
description = "A webhook server"
authors = ["trivernis <trivernis@protonmail.com>"]
license = "GPL-3.0"
readme = "README.md"
version = "0.1.2"
edition = "2018"
repository = "https://github.com/Trivernis/multihook.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.26"
config = "0.11.0"
lazy_static = "1.4.0"
dirs = "3.0.2"
toml = "0.5.8"
glob = "0.3.0"
log = "0.4.14"
colored = "2.0.0"
chrono = "0.4.19"
fern = "0.6.0"
serde_json = "1.0.66"
jsonpath = "0.1.1"
regex = "1.5.4"

[dependencies.serde]
version = "1.0.127"
features = ["derive"]

[dependencies.tokio]
version = "1.9.0"
features = ["macros", "process", "sync"]

[dependencies.hyper]
version = "0.14.11"
features = ["server", "http1", "http2", "tcp"]

[features]
default = ["tokio/rt-multi-thread"]
singlethreaded = ["tokio/rt"]