[package]
name = "multihook"
description = "A webhook server"
authors = ["trivernis <trivernis@protonmail.com>"]
license = "GPL-3.0"
readme = "README.md"
version = "0.4.1"
edition = "2018"
repository = "https://github.com/Trivernis/multihook.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
config = "0.13.3"
lazy_static = "1.4.0"
dirs = "5.0.1"
toml = "0.7.4"
glob = "0.3.1"
log = "0.4.19"
colored = "2.0.0"
chrono = "0.4.26"
fern = "0.6.2"
serde_json = "1.0.97"
jsonpath = "0.1.1"
regex = "1.8.4"
hmac = "0.12.1"
sha2 = "0.10.7"
hex = "0.4.3"

[dependencies.serde]
version = "1.0.164"
features = ["derive"]

[dependencies.tokio]
version = "1.28.2"
features = ["macros", "process", "sync"]

[dependencies.hyper]
version = "0.14.26"
features = ["server", "http1", "http2", "tcp"]

[features]
default = ["tokio/rt-multi-thread"]
singlethreaded = ["tokio/rt"]
